# mytex

./: .clang-tidy  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: build.yaml
ci/: clang-format.sh  clang-tidy.sh
include/baudvine/: mytex.h
test/: .clang-tidy  CMakeLists.txt  test_example.cpp  test_mytex.cpp
